app/assets/stylesheets/lara-typescript.css
/* ... */
a {
  color: inherit;
}

button.bigButton {
  background: var(--ltr-teal);
  border: solid 1px var(--med-gray);
  border-radius: 4px;
  color: var(--dark-gray);
  cursor: pointer;
  display: block;
  font-family: var(--font-family-default);
  font-size: 18px;
  font-weight: 700;
  line-height: 1;
  margin: 10px auto;
  padding: 14px 19px;
  text-align: center;
}
button.bigButton:hover, button.bigButton:active {
  background: var(--teal);
  color: white;
}
button.bigButton:hover svg, button.bigButton:active svg {
  fill: white;
}
button.bigButton span.lineAdjust {
  height: 16px;
  line-height: 17px;
}
button.bigButton svg {
  align-self: center;
  fill: var(--dark-gray);
  margin: 0 3px 0 0;
}

button.smallButton {
  background: var(--ltst-teal);
  border: solid 1px var(--med-gray);
  border-radius: 4px;
  color: var(--dark-gray);
  cursor: pointer;
  display: flex;
  font-family: var(--font-family-default);
  font-size: 14px;
  font-weight: 700;
  line-height: 1;
  margin: 0 auto;
  padding: 10px 15px;
  text-align: center;
}
button.smallButton:hover {
  background: var(--ltr-teal);
}
button.smallButton:active {
  background: var(--teal);
  color: white;
}
button.smallButton:active svg {
  fill: white;
}
button.smallButton span.lineAdjust {
  height: 16px;
  line-height: 17px;
}
button.smallButton svg {
  align-self: center;
  fill: var(--dark-gray);
  margin: 0 3px 0 0;
}

select {
  align-self: center;
  border: solid 1.5px var(--med-gray);
  border-radius: 4px;
  padding: 5px 10px;
}

.edit-page-grid-container {
  background: var(--ltr-teal);
  display: grid;
  gap: 0;
  grid-auto-rows: minmax(20px, auto);
  grid-template-columns: repeat(10, 1fr);
  margin: 10px;
}
.edit-page-grid-container.section-full-width {
  grid-template-columns: 1fr;
}
.edit-page-grid-container.section-full-width .sectionItem.halfWidth {
  width: calc(50% - 6px);
}
.edit-page-grid-container.section-30-70 {
  grid-template-columns: 3fr 7fr;
}
.edit-page-grid-container.section-70-30 {
  grid-template-columns: 7fr 3fr;
}
.edit-page-grid-container.section-40-60 {
  grid-template-columns: 4fr 6fr;
}
.edit-page-grid-container.section-60-40 {
  grid-template-columns: 6fr 4fr;
}
.edit-page-grid-container.section-responsive-2-columns {
  grid-template-columns: 325px 1fr;
}
.edit-page-grid-container.section-responsive-2-columns .section-responsive-fluid .edit-items-container {
  display: flex;
  flex-direction: column;
}
.edit-page-grid-container.section-responsive-2-columns .section-responsive-fluid .edit-items-container .itemsContainer {
  width: calc(91.5vw - 345px);
  max-width: calc(100% - 20px);
  min-width: 515px;
}
.edit-page-grid-container.section-responsive-full-width {
  display: flex;
  flex-direction: column;
}
.edit-page-grid-container.section-responsive-full-width .section-responsive-fluid .edit-items-container {
  display: flex;
  flex-direction: column;
}
.edit-page-grid-container.section-responsive-full-width .section-responsive-fluid .edit-items-container .itemsContainer {
  width: calc(91.5vw - 20px);
  max-width: 1060px;
  min-width: 700px;
}
.edit-page-grid-container.section-responsive-full-width .section-responsive-fluid .edit-items-container .itemsContainer .sectionItem.halfWidth {
  width: calc(50% - 6px);
}
.edit-page-grid-container.col-2 {
  margin-left: 0;
}
.edit-page-grid-container.hidden {
  opacity: 0.5;
}

.teal-label {
  color: var(--teal);
  font-weight: bold;
  text-transform: uppercase;
}

.page-settings {
  display: flex;
  padding: 10px;
  font-size: 12pt;
  background-color: var(--lt-gray);
  display: flex;
  flex-direction: row;
  flex-wrap: no-wrap;
  justify-content: space-around;
}

.part-label {
  color: var(--teal);
  font-size: 18pt;
  grid-column: 1/2;
  justify-self: end;
}

.activity-name {
  color: var(--orange);
  font-size: 18pt;
  grid-column: 2/8;
  justify-self: start;
}

.page-name {
  color: black;
  font-size: 18pt;
  grid-column: 2/8;
  justify-self: start;
}

.page-numbers {
  grid-column: 8/11;
  justify-self: end;
}

.page-numbers.page-nav {
  position: unset;
  right: unset;
  top: unset;
}

#preview-menu {
  float: unset;
  grid-column: 7/11;
  justify-self: end;
}

#preview-options-select {
  margin-left: unset;
}

.full-row {
  grid-column: span 10;
}

.sectionMenu {
  background-color: var(--teal);
  color: white;
  display: flex;
  font-family: var(--font-family-default);
  font-size: 16px;
  justify-content: space-between;
  align-items: center;
  padding: 5px 5px 6px 5px;
}
.sectionMenu > a {
  color: white;
}
.sectionMenu label {
  line-height: 1;
  margin-right: 5px;
  text-transform: none;
}
.sectionMenu .menuStart {
  align-items: center;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}
.sectionMenu .menuStart .sectionName {
  display: flex;
  align-items: center;
  margin: 0 10px;
  min-width: 230px;
}
.sectionMenu .menuStart .sectionName form {
  display: flex;
  align-items: center;
}
.sectionMenu .menuStart .sectionName form input {
  width: 100px;
  margin-right: 5px;
}
.sectionMenu .menuStart .sectionName h3 {
  display: inline;
  margin: 0 5px 0 0;
  white-space: nowrap;
}
.sectionMenu .menuStart .sectionName button {
  background: transparent;
  border: none;
  border-radius: 4px;
  color: white;
  cursor: pointer;
  display: flex;
  font-family: var(--font-family-default);
  font-size: 11.5px;
  margin: 0;
  padding: 5px;
  position: relative;
  text-transform: uppercase;
  transition: 0.2s;
}
.sectionMenu .menuStart .sectionName button:hover {
  background: var(--ltr-teal);
  color: var(--teal);
}
.sectionMenu .menuStart .sectionName button:active {
  background: var(--lt-teal);
  color: var(--teal);
}
.sectionMenu .menuStart .sectionName button:active:after {
  border-color: var(--lt-teal);
}
/* ... */

